[gd_scene load_steps=2 format=3 uid="uid://bha4gwnq4se7k"]

[ext_resource type="Script" path="res://utils/region_loader.gd" id="1_aoe41"]

[node name="RegionLoader" type="Area2D"]
collision_layer = 0
collision_mask = 32768
script = ExtResource("1_aoe41")

[node name="RecentlyExitedTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="RecentlyExitedTimer" to="." method="_on_recently_exited_timer_timeout"]
